# AudioThing

./: AudioThing.sln
AudioThing/: PcmPlayer.cs
NativeLibs/win-x64/: AudioThing.Native.Static.lib  AudioThing.Wasapi.Static.lib  AudioThing.Wasapi.lib
Source/: AudioThing.Wasapi.sln  AudioThing.sln
Source/AudioThing/: AudioClient.cs  AudioFormat.cs  AudioPlayer.cs  AudioThing.csproj  Manager.cs  PcmPlayer.cs  WasapiAudioClient.cs
Source/AudioThing.Native/: CMakeLists.txt
Source/AudioThing.Native.Wasapi/: AudioThing.Native.Wasapi.Shared.vcxproj  AudioThing.Native.Wasapi.Static.vcxproj  AudioThing.Native.Wasapi.Static.vcxproj.filters  AudioThing.Native.Wasapi.sln  Client.cpp  Client.hpp  Main.cpp
Source/AudioThing.Native/Source/: AlsaClient.cpp  Client.hpp  Main.cpp  WasapiClient.cpp
Source/AudioThing.Wasapi/: AudioThing.Wasapi.Static.vcxproj  AudioThing.Wasapi.vcxproj  Main.cpp
Source/AudioThing.Wasapi.Native/: AudioThing.Wasapi.Native.Shared.vcxproj  AudioThing.Wasapi.Native.Static.vcxproj  AudioThing.Wasapi.Native.sln
Source/Test/: Program.cs  Test.csproj
